feat: Atualiza dependências do projeto, adiciona novos campos ao mock de atendimento e implementa melhorias na estrutura do código, incluindo a adição de um novo componente de busca de clientes e ajustes na interface para melhor usabilidade.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3002
+    env_file:
+      - .env
     ports:
       - "3002:3002"
     healthcheck:
